yaml/app1/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app1
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20M"
spec:
  rules:
  - host: app1.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app1-front
          servicePort: 80
      - path: /getarticle
        backend:
          serviceName: app1-server
          servicePort: 80
